<resources>
    <string name="app_name">Notes</string>

    <string name="placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="share">Поделиться</string>

    <!-- menu -->
    <string name="title_edit">Редактировать</string>
    <string name="title_delete">Удалить</string>
    <string name="title_check_all">Выделить все</string>
    <string name="title_add">Добавить</string>
    <string name="title_save">Сохранить</string>
    <string name="title_notes">Заметки</string>
    <string name="title_menu">Меню</string>
    <string name="title_search">Поиск</string>
    <string name="title_share">Поделиться</string>

    <!-- PreviewDialogFragment -->
    <string name="preview_dialog_fragment_select">Выбрать</string>
    <string name="preview_dialog_fragment_unselect">Отменить выбор</string>
    <string name="preview_dialog_fragment_delete">Удалить</string>
    <string name="preview_dialog_fragment_restore">Восстановить</string>

    <!-- RegistrationFragment -->
    <string name="registration_fragment_title">Регистрация</string>
    <string name="registration_fragment_login">Почта</string>
    <string name="registration_fragment_password">Пароль</string>
    <string name="registration_fragment_repeat_password">Пароль еще раз</string>
    <string name="registration_fragment_register">Зарегистрироваться</string>
    <string name="registration_fragment_auth">Авторизация</string>
    <string name="registration_fragment_passwords_no_equals">Пароли не совпадают</string>

    <!-- AuthFragment -->
    <string name="auth_fragment_title">Авторизация</string>
    <string name="auth_fragment_login">Почта</string>
    <string name="auth_fragment_password">Пароль</string>
    <string name="auth_fragment_login_up">Войти</string>
    <string name="auth_fragment_register">Регистрация</string>

    <!-- NotesFragment -->
    <string name="notes_fragment_title">Заметки</string>
    <string name="notes_fragment_title_count">Выбрано %d</string>

    <!-- EditNoteFragment -->
    <string name="edit_note_fragment_title_new">Новая заметка</string>
    <string name="edit_note_fragment_title_edit">Заметка</string>
    <string name="edit_note_fragment_name">Название</string>
    <string name="edit_note_fragment_text">Текст заметки</string>

    <!-- MenuFragment -->
    <string name="menu_fragment_title">Меню</string>
    <string name="menu_fragment_settings">Настройки</string>
    <string name="menu_fragment_about_app">О приложении</string>
    <string name="menu_fragment_deleted_notes">Удаленные заметки</string>
    <string name="menu_fragment_log_out">Выйти</string>

    <!-- EmptyFragment -->
    <string name="empty_fragment_not_selected">Ничего не выбрано</string>

    <!-- AboutAppFragment -->
    <string name="about_app_fragment_title">О приложении</string>
    <string name="about_app_fragment_developer">Разработчик: Федотов Яков</string>
    <string name="about_app_fragment_version">Версия: %1s</string>

    <!-- DeleteNotesFragment -->
    <string name="delete_notes_fragment_title">Удаленные заметки</string>
    <string name="delete_notes_fragment_title_count">Выбрано %d</string>

    <!-- DeleteNoteFragment -->
    <string name="delete_note_fragment_title">Удаленная заметка</string>
    <string name="delete_note_fragment_name">Название</string>
    <string name="delete_note_fragment_text">Текст заметки</string>

</resources>