<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/menu_fragment_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Текст" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="21dp"
        android:background="@color/red"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:text="Текст" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menu"
        style="@style/Widget.LinearLayout.List"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/appBar">


        <com.skydoves.progressview.ProgressView
            android:id="@+id/progressView1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:progressView_colorBackground="@color/white"
            app:progressView_colorProgress="@color/red"
            app:progressView_progress="40"
            app:progressView_min="0"
            app:progressView_max="100"
            app:progressView_progressFromPrevious="false"
            app:progressView_autoAnimate="false"
            app:progressView_radius="12dp"
            app:progressView_padding="1dp"
            app:progressView_labelColorInner="@color/primary"
            app:progressView_labelColorOuter="@color/black"
            app:progressView_labelSize="13sp"
            app:progressView_labelSpace="10dp"
            app:progressView_labelText="achieve 65%"
            app:progressView_labelTypeface="bold" />

        <TextView
            android:id="@+id/settings"
            style="@style/Widget.TextView.ItemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_fragment_settings"
            app:drawableEndCompat="@drawable/ic_right"
            app:drawableStartCompat="@drawable/ic_settings" />

        <TextView
            android:id="@+id/deleted_notes"
            style="@style/Widget.TextView.ItemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_fragment_deleted_notes"
            app:drawableEndCompat="@drawable/ic_right"
            app:drawableStartCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/about_app"
            style="@style/Widget.TextView.ItemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_fragment_about_app"
            app:drawableEndCompat="@drawable/ic_right"
            app:drawableStartCompat="@drawable/ic_device_information" />


        <TextView
            android:id="@+id/log_out"
            style="@style/Widget.TextView.ItemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_fragment_log_out"
            android:textColor="@color/red"
            android:drawableTint="@color/red"
            app:drawableStartCompat="@drawable/ic_logout" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>