<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/background_1"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:visibility="gone"
                android:ems="10"
                android:padding="8dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBar"
                tools:text="Имя" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:gravity="top"
                android:padding="8dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/menu"
        style="@style/Widget.LinearLayout.List"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/note"
        app:layout_constraintStart_toStartOf="@id/note"
        app:layout_constraintTop_toBottomOf="@id/note">

        <TextView
            android:id="@+id/select"
            style="@style/Widget.TextView.ItemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_dialog_fragment_select"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/ic_check_circle" />

        <TextView
            android:id="@+id/unselect"
            style="@style/Widget.TextView.ItemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_dialog_fragment_unselect"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/ic_unchecked" />

        <TextView
            android:id="@+id/restore"
            style="@style/Widget.TextView.ItemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_dialog_fragment_restore"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/ic_restore" />

        <TextView
            android:id="@+id/delete"
            style="@style/Widget.TextView.ItemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_dialog_fragment_delete"
            android:visibility="gone"
            android:textColor="@color/red"
            app:drawableEndCompat="@drawable/ic_delete"
            app:drawableTint="@color/red" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>